add api available vehicles
