# routes/api.php
@@ -1,14 +1,18 @@
 <?php
 
+use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\VehicleController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-
-Route::post('/tokens/create', function (Request $request) {
-    $token = $request->user()->createToken($request->token_name);
-
-    return ['token' => $token->plainTextToken];
-});
 
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
+
+
+Route::prefix('v1')->group(function () {
+    Route::post('/tokens/create', [AuthController::class, 'token']);
+    Route::middleware('auth:sanctum')->group(function () {
+        Route::get('/showcase/available_vehicles/', [VehicleController::class, 'index']);
+    });
+});
